Fix: Removed margin that was causing clipping/overflow of content menus sometimes

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -556,10 +556,6 @@ html {
         max-width: 15vw;
     }
 
-    .layout-mobile .dialogContainer>.focuscontainer.dialog.actionsheet-not-fullscreen.actionSheet.centeredDialog.opened {
-        margin: -.4em -.8em !important;
-    }
-
     .layout-mobile [dir=ltr] .infoWrapper {
         padding-left: 25% !important;
     }
@@ -830,10 +826,6 @@ progress+span {
 
 .centerMessage {
     width: unset;
-}
-
-.dialogContainer:not(:has(.dialog-fullscreen, .dialog-fullscreen-lowres)) {
-    margin: .33em;
 }
 
 .dialog {
